# pytest-filter-subpackage

./: .gitignore  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  azure-pipelines.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  python-tests.yml
pytest_filter_subpackage/: plugin.py
tests/: conftest.py  test_filter_subpackage.py
