[metadata]
name = pytest-filter-subpackage
url = https://github.com/astropy/pytest-filter-subpackage
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD-3-Clause
license_files = LICENSE.rst
classifiers =
	Development Status :: 5 - Production/Stable
	Framework :: Pytest
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Topic :: Software Development :: Testing
	Topic :: Utilities
description = Pytest plugin for filtering based on sub-packages
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = pytest, py.test

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
install_requires =
	pytest>=6.2
	packaging

[options.entry_points]
pytest11 =
	pytest_filter_subpackage = pytest_filter_subpackage.plugin

[options.extras_require]
test =
    pytest
    pytest-doctestplus
    pytest-cov

[tool:pytest]
minversion = 6.2
testpaths = tests pytest_filter_subpackage
xfail_strict = true
filterwarnings =
	error
	ignore:file format.*:UserWarning
	ignore:.*non-empty pattern match.*:FutureWarning

[flake8]
max-line-length = 100

[bdist_wheel]
universal = 1
